@@ -167,6 +167,12 @@ ms_sjoin(struct Client *client_p, struct Client *source_p,
       case 'p':
         mode.mode |= MODE_PRIVATE;
         break;
+      case 'O':
+        mode.mode |= MODE_OPERONLY;
+        break;
+      case 'S':
+        mode.mode |= MODE_SSLONLY;
+        break;
       case 'k':
         strlcpy(mode.key, parv[4 + args], sizeof(mode.key));
         args++;
@@ -634,6 +640,8 @@ static const struct mode_letter
   { MODE_MODERATED,  'm' },
   { MODE_INVITEONLY, 'i' },
   { MODE_PRIVATE,    'p' },
+  { MODE_OPERONLY,   'O' },
+  { MODE_SSLONLY,    'S' },
   { 0, '\0' }
 };
 
