@@ -25,9 +25,9 @@ static struct NumericInfo replies[] = {
 /* 002 */  {"RPL_YOURHOST", ":%s 002 %s :Your host is %s, running version %s", NULL},
 /* 003 */  {"RPL_CREATED", ":%s 003 %s :This server was created %s", NULL},
 #ifdef HALFOPS
-/* 004 */  {"RPL_MYINFO", ":%s 004 %s %s %s %s biklmnopstveIh bkloveIh", NULL},
+/* 004 */  {"RPL_MYINFO", ":%s 004 %s %s %s %s biklmnopstveIhOS bkloveIh", NULL},
 #else
-/* 004 */  {"RPL_MYINFO", ":%s 004 %s %s %s %s biklmnopstveI bkloveI", NULL},
+/* 004 */  {"RPL_MYINFO", ":%s 004 %s %s %s %s biklmnopstveIOS bkloveI", NULL},
 #endif
 /* 005 */  {"RPL_ISUPPORT", ":%s 005 %s %s :are supported by this server", NULL},
 /* 006 */  {NULL, NULL, NULL},
@@ -494,7 +494,7 @@ static struct NumericInfo replies[] = {
 /* 467 */  {NULL, NULL, NULL},
 /* 468 */  {NULL, NULL, NULL},
 /* 469 */  {NULL, NULL, NULL},
-/* 470 */  {NULL, NULL, NULL},
+/* 470 */  {"ERR_OPERONLYCHAN", ":%s 470 %s %s :Cannot join channel (+O)", NULL},
 /* 471 */  {"ERR_CHANNELISFULL", ":%s 471 %s %s :Cannot join channel (+l)", NULL},
 /* 472 */  {"ERR_UNKNOWNMODE", ":%s 472 %s %c :is unknown mode char to me", NULL},
 /* 473 */  {"ERR_INVITEONLYCHAN", ":%s 473 %s %s :Cannot join channel (+i)", NULL},
@@ -504,7 +504,7 @@ static struct NumericInfo replies[] = {
 /* 477 */  {NULL, NULL, NULL},
 /* 478 */  {"ERR_BANLISTFULL", ":%s 478 %s %s %s :Channel ban list is full", NULL},
 /* 479 */  {"ERR_BADCHANNAME", ":%s 479 %s %s :Illegal channel name", NULL},
-/* 480 */  {NULL, NULL, NULL},
+/* 480 */  {"ERR_SSLONLYCHAN", ":%s 480 %s %s :Cannot join channel (+S)", NULL},
 /* 481 */  {"ERR_NOPRIVILEGES", ":%s 481 %s :Permission Denied - You're not an IRC operator", NULL},
 /* 482 */  {"ERR_CHANOPRIVSNEEDED", ":%s 482 %s %s :You're not channel operator", NULL},
 /* 483 */  {"ERR_CANTKILLSERVER", ":%s 483 %s :You can't kill a server!", NULL},
